fixed contrast issues at footer

--- a/css/style.css
+++ b/css/style.css
@@ -888,8 +888,6 @@ body:after {
     margin-bottom: 30px; }
   .footer ul li {
     margin-bottom: 10px; }
-  .footer a {
-    color: #888888; }
     .footer a:hover {
       color: #000; }
 
